# sanatana-kalender

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  PROJECT.md  README.md  check-db.ts  check_db_counts.ts  check_english_events.ts  check_jan.ts  check_jan_simple.mjs  check_jan_simple.ts  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  gemini.md  knip.config.ts  list_events.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  quick_check.mjs  sadhana-prod-20260418-1850.sql  test-categories.ts  test-date.ts  test-date2.ts  tsconfig.json  tsconfig.scripts.json  validate-events.ts  validate-seed.ts  verify_offset.ts  vitest.config.ts  (+1 more)
.claude/: settings.local.json
.husky/: pre-commit
__mocks__/: server-only.ts
conductor/: encyclopedia-plan.md  theme-migration.md
docs/reference/sadhana_app/backend/: .env.example  pyproject.toml
docs/reference/sadhana_app/backend/alembic/: env.py
docs/reference/sadhana_app/backend/alembic/versions/: ae98fb8da757_add_practices_and_session_items.py  c3f1a2b45d67_add_unit_to_session_items.py  eeb23ffbc9c1_initial.py
docs/reference/sadhana_app/backend/app/: config.py  database.py  main.py  models.py  schemas.py
docs/reference/sadhana_app/backend/app/routers/: goals.py  practices.py  sessions.py  stats.py
docs/reference/sadhana_app/backend/sadhana_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/reference/sadhana_app/backend/tests/: conftest.py  test_sessions.py  test_stats.py
(+914 files in other folders)
